# rekt

./: .env  Cargo.toml  README.md  docker-compose.yml
docs/: rekt.postman_collection.json
migrations/2023-02-04-161438_users/: up.sql
src/: api.rs  api_error.rs  db.rs  main.rs  schema.rs
src/api/: handlers.rs
src/api/handlers/: auth.rs  users.rs
src/api/models/: user.rs  users.rs
