[package]
name = "rekt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0.0", features = ["postgres"] }
yew = { version = "0.20.0", features = ["csr"] }
dotenvy = "0.15"