[package]
name = "rekt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
uuid = { version = "1.3.0", features = [ "serde", "v4"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
r2d2 = "0.8.10"
serde = "1.0.152"
serde_json = "1.0.91"
actix-service = "2.0.2"
reqwest = "0.11.14"
actix-rt = "2.8.0"
lazy_static = "1.4.0"